--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!doctype html>
 <html>
-    <head>
-        <script src="bundle.js"></script>
-    </head>
-    <body>
-    </body>
+  <head>
+    <title>Game Boy Jam</title>
+    <script src="phaser.min.js"></script>
+    <script src="app.js"></script>
+  </head>
+  <body>
+  </body>
 </html>
