add phaser and update bundle

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Game Boy Jam</title>
     <script src="phaser.min.js"></script>
-    <script src="app.js"></script>
+    <script src="bundle.js"></script>
   </head>
   <body>
   </body>
