--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Game Boy Jam</title>
-    <script src="phaser.js"></script>
+    <script src="phaser.min.js"></script>
     <script src="app.js"></script>
   </head>
   <body>
