--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <script src="bundle.js"></script>
   </head>
   <body>
+      <p>
+        W - GO!
+        A - Rotate Left!
+        D - Rotate Right!
+        S - Who Knows? Stop?!?!
+
+        J - B button (probably space blaster)
+        K - ?
+
+        Enter - Start
+      </p>
   </body>
 </html>
