--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <script src="bundle.js"></script>
   </head>
   <body>
-      <p>
-        W - GO!
-        A - Rotate Left!
-        D - Rotate Right!
-        S - Who Knows? Stop?!?!
-
-        J - B button (probably space blaster)
-        K - ?
-
-        Enter - Start
-      </p>
+      <ul>
+          <li>W - GO!</li>
+          <li>A - Rotate Left!</li>
+          <li>D - Rotate Right!</li>
+          <li>S - Who Knows? Stop?!?!</li>
+          <li>J - B button (probably space blaster)</li>
+          <li>K - ?</li>
+          <li>Enter - Start</li>
+    </ul>
   </body>
 </html>
